--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -4,11 +4,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: lightcyan;
   display: flex;
   align-items: center;
+  background-color: #fff;
   .x-panel{
-    margin-top: -140px
+    margin-top: -140px;
+    border: none
   }
   .login-panel-footer{
     display: flex;
