--- a/src/pages/Main/AppHeader/AppHeader.scss
+++ b/src/pages/Main/AppHeader/AppHeader.scss
@@ -1,7 +1,14 @@
+@import '../../../assets/scss/theme.scss';
+
 .app-header-wrap{
+  display: flex;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
   width: 100%;
   height: 40px;
-  display: flex;
+  background: $appHeaderBgColor;
   .bars-btn{
     flex: 0 0 40px;
     line-height: 40px;
