--- a/src/pages/Main/AppSidebar/AppSidebar.scss
+++ b/src/pages/Main/AppSidebar/AppSidebar.scss
@@ -7,7 +7,7 @@
   font-size: 14px;
   display: flex;
   flex-direction: column;
-  background-color: $appSidebarBackColor;
+  background-color: $appSidebarBgColor;
   .user-msg-wrap{
     flex: 0 0 60px;
     width: 100%;
